[gd_scene load_steps=10 format=3 uid="uid://dhwa34ojymysn"]

[ext_resource type="Script" path="res://scenes/entities/enemy0/boss.gd" id="1_4he6g"]
[ext_resource type="Texture2D" uid="uid://bdnr1xs1fo7vw" path="res://assets/entities/enemy0/boss_sleep.png" id="2_qru48"]
[ext_resource type="Shader" path="res://scenes/entities/hit_flash.gdshader" id="2_yj8lu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gyhi1"]
size = Vector2(160, 176)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_at847"]
shader = ExtResource("2_yj8lu")
shader_parameter/flash_color = Color(1, 0.687324, 0.957952, 1)
shader_parameter/flash_value = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxsfg"]
size = Vector2(176, 200)

[sub_resource type="Animation" id="Animation_y7qn7"]
resource_name = "hurt"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_s7ufj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cyvph"]
_data = {
"RESET": SubResource("Animation_s7ufj"),
"hurt": SubResource("Animation_y7qn7")
}

[node name="Boss" type="StaticBody2D"]
script = ExtResource("1_4he6g")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_gyhi1")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_at847")
position = Vector2(-8.34465e-06, 4.76837e-07)
scale = Vector2(1.04, 1.04)
texture = ExtResource("2_qru48")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_wxsfg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cyvph")
}

[connection signal="boss_state_change" from="." to="." method="_on_boss_state_change"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
